<resources>
    <string name="app_name">WhatsApp</string>

    <!-- Pagina Inicial WhatsApp -->
    <string name="titulo_bemVindo">Bem-vindo(a) ao WhatsApp</string>
    <string name="tos">Leia nossa <font color="#34B7F1">Política de Privacidade.</font> Toque em "Concordar &amp; Continuar" para aceitar os<br />
        <font color="#34B7F1"> Termos de Serviço</font></string>
    <string name="botao_concordar">Concordar &amp; Continuar</string>

    <!-- Login -->
    <string name="cadastre_se">Não tem conta? <font color="#34B7F1"> Cadastre-se</font></string>
    <string name="imagem_introducao">Imagem introdução do app</string>
    <string name="botao_logar">Entrar</string>
    <string name="hint_email">Digite o seu e-mail</string>
    <string name="hint_senha">Digite a sua senha</string>
    <string name="imagem_logo_login">Imagem logo login</string>


    <!-- Cadastro -->
    <string name="hint_nome">Digite o seu nome</string>
    <string name="login_cadastrese">Já tem uma conta ?  <font color="#34B7F1"> Entre</font></string>
    <string name="button_cadastrar"> Cadastrar</string>

    <string name="pesquisar_menu_principal">Pesquisar</string>
    <string name="configuracao_menu_principal">Configurações</string>
    <string name="sair_menu_principal">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragmentCamera">Camera</string>
    <string name="hello_blank_fragmentStatus">Status</string>

    <!-- Configuracao App-->
    <string name="config">Configurações</string>
    <string name="pessoa_perfil">Foto do perfil da pessoa</string>
    <string name="nome_pessoa_perfil">Nome</string>
    <string name="text_status"> </string>
    <string name="conta_config">Conta</string>
    <string name="conta_config_desc">Privacidade, segurança, mudar número</string>
    <string name="conversas_config">Conversas</string>
    <string name="conversas_config_desc">Privacidade, segurança, mudar número</string>
    <string name="notificacoes_config">Notificações</string>
    <string name="notificacoes_config_desc">Mensagem, toques de grupo, chamada</string>
    <string name="armazenamento_config">Armazenamento e dados</string>
    <string name="armazenamento_config_desc">Uso de rede, download automático</string>
    <string name="ajuda_config">Ajuda</string>
    <string name="ajuda_config_desc">Central de ajuda, fale conosco, política de privacidade</string>
    <string name="convite_config">Convidar um amigo</string>
    <string name="facebook_from_config">from</string>
    <string name="facebook_config">FACEBOOK</string>

    <!--    Contatos App -->
    <string name="contatos">Contatos</string>
    <string name="novo_grupo">Novo grupo</string>
    <string name="novo_contato">Novo contato</string>

    <!-- Menu Contatos-->
    <string name="menu_contatos_convidar">Convidar um amigo</string>
    <string name="menu_contatos_atualizar">Atualizar</string>
    <string name="menu_contatos_ajuda">Ajuda</string>

    <!--    Perfil App -->
    <string name="perfil">Perfil</string>
    <string name="nome">Nome</string>
    <string name="recado">Recado</string>
    <string name="telefone">Telefone</string>
    <string name="perfil_desc">Esse não é seu nome de usuário nem seu PIN. Esse nome será
    visível para seus contatos do WhatsApp</string>
    <string name="numero_telefone">+55 85 98855 5544</string>
    <string name="camera">Camera</string>
    <string name="galeria">Galeria</string>
    <string name="foto_do_perfil">Foto do Perfil</string>
    <string name="hint_nome_perfil">Insira seu nome</string>



    <!-- Pessoas App-->

    <string name="status_padrao">Hey there! I am using WhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Contatos App-->
    <string name="pesquisar">Pesquisar...</string>
    <string name="nome_contato">Nome</string>
    <string name="status_contato">Status contato</string>

    <!-- Status App-->
    <string name="meu_status">Meu status</string>
    <string name="atualizar_status">Toque para atualizar seu status</string>
    <string name="atualizacoes_vistas">Atualizações vistas</string>

    <!-- Chat App-->
    <string name="chat_foto">Foto do perfil da pessoa</string>
    <string name="nome_pessoa_chat">Nome</string>
    <string name="hint_chat">Digite uma mensagem..</string>
    <string name="hora_mensagem">15:00</string>
    <string name="mensagem_esquerda"> </string>
    <string name="ultima_conversa"> </string>


</resources>