<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/adapter_conversas">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imagem_perfil_conversa"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/ic_launcher" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nome_conversa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/nome_contato"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ultima_conversa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="3dp"
                            android:text="@string/ultima_conversa"
                            android:textSize="13sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/hora_mensagem_conversa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hora_mensagem" />

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/notificacao_conversa"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginLeft="42dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/corAccent"
                            android:backgroundTint="@color/corAccent"
                            app:cardCornerRadius="30dp" />


                </LinearLayout>


        </LinearLayout>







</RelativeLayout>